--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "homepage": "https://github.com/HarryWho/vs-code#readme",
   "dependencies": {
-    "express": "^4.16.2"
+    "bootstrap": "^4.0.0",
+    "express": "^4.16.2",
+    "express-handlebars": "^3.0.0",
+    "jquery": "^3.3.1"
   }
 }
